# FoB

./: Flock.h  Flock.m  FoBController.h  FoBController.m  FoB_Prefix.pch  Info.plist  Liberty.h  Liberty.m  README.md  Send.c  Send.h  Smoothing.c  Smoothing.h  Standardization.c  Standardization.h  Tracker.h  Tracker.m  bird_record.h  ezusb.h  ezusb.m  liberty_hl.cpp  liberty_hl.h  libusb-1.0.4.tar.bz2  main.m
English.lproj/: InfoPlist.strings
English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
English.lproj/MainMenu~.nib/: classes.nib  info.nib  keyedobjects.nib
FoB.xcodeproj/: anthony.mode1v3  anthony.pbxuser  anthony.perspective  joseph.mode1  joseph.pbxuser  josephlarralde.mode1v3  josephlarralde.pbxuser  percussion_aerienne.mode1  percussion_aerienne.pbxuser  project.pbxproj
FoB.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FoB.xcodeproj/project.xcworkspace/xcuserdata/joseph.xcuserdatad/: UserInterfaceState.xcuserstate
FoB.xcodeproj/xcuserdata/joseph.xcuserdatad/xcschemes/: FoB.xcscheme  libflock-static.xcscheme  libflock.xcscheme  libusb-static.xcscheme  xcschememanagement.plist
libflock/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  SCRIME  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  cdebug.m4  config.h  config.h.in  configure  configure.in  cwarnings.m4  flock_report_errors.m4  libflock.m4
libflock/autom4te.cache/: output.0  traces.0
libflock/flock/: Makefile.am  Makefile.in  flock.c  flock.h  flock_bird.c  flock_bird.h  flock_bird_private.h  flock_bird_record.c  flock_bird_record.h  flock_command.c  flock_command.h  flock_command_private.h  flock_common.h  flock_error.c  flock_error.h  flock_hl.c  flock_hl.h  flock_mode.c  flock_mode.h  flock_private.h
libflock/flockUtils/: Makefile.am  Makefile.am.old  Makefile.in  OSC.c  OSC.h  flockBumps.c  flockMoves.c  flockNoise.c  flockOSC.c  flockOSC_seb.c  flockOSC_vinc.c  flockOutput  flockOutput.c  flockSpeed.c  flockVisu.c  netBump2Sound.c
libflock/flockUtils/old/: flockBumps.c  flockOSC.c
libflock/flockUtils/user/: Set_List  Set_List2  kbd_20cases  meta07
libflock/tests/: Makefile.am  Makefile.in  hl.c  raw.c  stream.c
libusb-1.0.4/: ChangeLog  Makefile  config.h  config.status  configure  libtool  libusb-1.0.pc
libusb-1.0.4/doc/: Makefile
libusb-1.0.4/examples/: Makefile
libusb-1.0.4/libusb/: Makefile
polhemus-tracker-terminal-1.0.0/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
polhemus-tracker-terminal-1.0.0/fw.rules/: 50-Polhemus_FW.rules  Makefile.am  Makefile.in
polhemus-tracker-terminal-1.0.0/src/: Makefile.am  Makefile.in  PiTerm.cpp  PiTerm.h  PiTracker.cpp  PiTracker.h
polhemus-tracker-terminal-1.0.0/usbfw/: Makefile.am  Makefile.in  PiTrkPerm  PiTrkPerm.c  fxload  getdevpath  loadFastrakFw  loadLbtyFw  loadLibHSFw  loadPatFw
