dnl Process this file with autoconf to produce a configure script.   -*- m4 -*-
AC_INIT(flock/flock.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Use automake.
dnl Remember to update version number in 'flock/Makefile.am'
dnl for libtool versioning.
AM_INIT_AUTOMAKE(libflock, 0.3.3)
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL

dnl Checks for cdebug option.
CDEBUG_CHECK

dnl Checks for cwarnings option.
CWARNINGS_CHECK

dnl Checks for report error option.
FLOCK_REPORT_ERRORS_CHECK(yes)

dnl Checks for libraries.
AC_CHECK_LIB(m, pow)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday select socket strerror)

dnl Optimization options.
if test "$cdebug" = "no"
then
  changequote(<<, >>)
  CFLAGS=`echo "$CFLAGS" | sed -e s/O[0-2]/O3/`
  CFLAGS="$CFLAGS -funroll-loops"
  CPPFLAGS="-DNDEBUG $CPPFLAGS"
  changequote([, ])
fi

AC_OUTPUT(Makefile flock/Makefile flockUtils/Makefile tests/Makefile)
